# llm-codegen-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-benchmark.txt  requirements.txt  run.py  run_custom_tasks.py
benchmarks/: __init__.py  humaneval.py  tasks.json
experiments/: analyze_metrics.py
scripts/: run_example.py
src/pipeline/: __init__.py  agents.py  cli.py  code_tools.py  config.py  llm.py  models.py  pipeline.py
stabilization_loop/: __init__.py  agents.py  config.py  context.py  humaneval_eval.py  llm.py  metrics.py  pipeline.py  reasoning.py  supervisor.py  validation.py
tasks/: __init__.py  registry.py
tests/: conftest.py  test_pipeline_internals.py  test_task_1_unique_elements.py  test_task_2_simple_array.py  test_task_3_point.py  test_task_4_sort_strings_by_length.py  test_tasks.py
